[Qt][WK2] Fix the build for newer Qt5 https://bugs.webkit.org/show_bug.cgi?id=75964

Patch by Rafael Brandao <rafael.lobo@openbossa.org> on 2012-01-11
Reviewed by Simon Hausmann.

Source/WebKit:

* WebKit.pri: Added the new files to the buildsystem.

Source/WebKit/qt:

Added QHttpHeader, QHttpResponseHeader and QHttpRequestHeader
that were removed from Qt. They are now kept under a private header
and only the relevant code is present.

* Api/qhttpheader.cpp: Added.
(QHttpHeader::QHttpHeader):
(QHttpHeader::~QHttpHeader):
(QHttpHeader::parse):
(QHttpHeader::value):
(QHttpHeader::hasKey):
(QHttpHeader::setValue):
(QHttpHeader::addValue):
(QHttpHeader::parseLine):
(QHttpHeader::toString):
(QHttpHeader::hasContentLength):
(QHttpHeader::contentLength):
(QHttpHeader::setContentLength):
(QHttpHeader::hasContentType):
(QHttpHeader::contentType):
(QHttpHeader::setContentType):
(QHttpResponseHeader::QHttpResponseHeader):
(QHttpResponseHeader::parseLine):
(QHttpResponseHeader::toString):
(QHttpRequestHeader::QHttpRequestHeader):
(QHttpRequestHeader::parseLine):
(QHttpRequestHeader::toString):
* Api/qhttpheader_p.h: Added.
(QHttpHeader::isValid):
(QHttpHeader::setValid):
(QHttpResponseHeader::statusCode):
(QHttpResponseHeader::reasonPhrase):
(QHttpResponseHeader::majorVersion):
(QHttpResponseHeader::minorVersion):
(QHttpRequestHeader::method):
(QHttpRequestHeader::path):
(QHttpRequestHeader::majorVersion):
(QHttpRequestHeader::minorVersion):
* WebCoreSupport/InspectorServerQt.cpp:

Canonical link: https://commits.webkit.org/92852@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@104680 268f45cc-cd09-0410-ab3c-d52691b4dbfc